--- a/TencentAIConfig.ini
+++ b/TencentAIConfig.ini
@@ -1,4 +1,4 @@
 [Service]
 UploadDataUrl=http://localhost:9999/UpdateAIData.ashx
-GetAIResultUrl=
+GetAIResultUrl=http://localhost:9999/GetAIResult.ashx
 UploadReportUrl=
